ISSUE-014: Created tab completion for subcommands with one extra argument