@@ -6,7 +6,9 @@ import org.bukkit.command.TabCompleter;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class FriendCommandTabCompleter implements TabCompleter {
@@ -15,6 +17,16 @@ public class FriendCommandTabCompleter implements TabCompleter {
 
     @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String @NotNull [] args) {
-        return List.of();
+        if (args.length == 1) {
+            List<String> completions = new ArrayList<>();
+            for (String sub : SUB_COMMANDS) {
+                if (sub.toLowerCase().startsWith(args[0].toLowerCase())) {
+                    completions.add(sub);
+                }
+            }
+            return completions;
+        }
+
+        return Collections.emptyList();
     }
 }
